Added responsive support for very small width device

--- a/src/app/launch-page-container/launch-mission-body/launch-mission-item/launch-mission-item.component.css
+++ b/src/app/launch-page-container/launch-mission-body/launch-mission-item/launch-mission-item.component.css
@@ -50,6 +50,17 @@
     margin-block-end: 0px;
 }
 
+@media screen and (max-width: 350px) {
+    .mission-image {
+        width: 200px;
+        height: 200px;
+    }
+
+    .mission-detail-section {
+        width: 200px;
+    }
+}
+
 @media screen and (min-width: 700px) and (max-width: 1023px) {
     .card-container {
         width: 100%;
